--- a/app/views/index.html
+++ b/app/views/index.html
@@ -72,15 +72,34 @@
 						<span class="govuk-warning-text__icon" aria-hidden="true">!</span>
 						<h2 class="govuk-warning-text__text gem-c-warning-text__text--large">
 							<span class="govuk-warning-text__assistive">Important</span>
-							Sign up for travel updates
-
+							There is an ongoing incident in Myanmar
 						</h2>
 					</div>
 				</div>
 				<div class="travel-advice-notice__content">
 					<p class="govuk-body">
-						<a href="/add_country?countryToAdd=Myanmar">Stay up to date with information and advice.</a>
+						<a href="/add_country?countryToAdd=Myanmar">Sign up for travel alerts</a>
 					</p>
+					Alerts will:
+					<ul class="gem-c-contents-list__list">
+						<li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+							One
+						</li>
+						<li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+							Two
+						</li>
+					</ul>
+					<br />
+					Alerts will not:
+					<ul class="gem-c-contents-list__list">
+						<li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+							One
+						</li>
+						<li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
+							Two
+						</li>
+					</ul>
+					<br />
 				</div>
 			</div>
 
@@ -209,6 +228,24 @@
 
 				<p>If you’re in the UK and worried about a British national in Myanmar, call 020 7008 1500.</p>
 
+				<h2>Latest updates</h2>
+				<h3>2 February 20201</h3>
+				<p>There is no formal ceasefire as yet in Kachin State or in northern Shan State's Kokang Self-Administered Zone.</p>
+				<h3>1 February 20201</h3>
+				<p>The Myanmar Military have declared a state of emergency and assumed control. There are reports that figures in the Civilian Government and civil society have been detained by the military. There is an increased security presence across the country.</p>
+				<details class="govuk-details" data-module="govuk-details">
+					<summary class="govuk-details__summary">
+				<span class="govuk-details__summary-text">
+				  See all updates
+				</span>
+					</summary>
+					<div class="govuk-details__text">
+						More updates...
+					</div>
+				</details>
+				<p class="govuk-body">
+					<a href="/add_country?countryToAdd=Myanmar">Sign up for travel alerts</a>
+				</p>
 				<div class="call-to-action">
 					<div role="note" aria-label="Warning" class="application-notice help-notice">
 						<p>Travel to Myanmar is subject to entry restrictions</p>
