--- a/app/views/intro.html
+++ b/app/views/intro.html
@@ -33,18 +33,16 @@
 		  Subscribe to Travel Alerts{% if data['countries'] and data['countries'].length %} for {{data['countries'].join(', ')}}{% endif %}
       </h1>
 
-		<p>Use this service to subscribe to Travel Alerts so that you are alerted to any new updates regarding:</p>
+		<p>Use this free service to subscribe to Travel Alerts so that you are alerted to any new updates regarding:</p>
 
 
 		<ul class="govuk-list govuk-list--bullet">
-			<li>Latest information on Coronavirus</li>
+			<li>Coronavirus</li>
 			<li>Safety and security</li>
-			<li>Entry Requirements</li>
-			<li>Travel Warnings</li>
-			<li>Emergency Updates</li>
+			<li>Entry requirements</li>
+			<li>Travel warnings</li>
+			<li>Emergency updates</li>
 		</ul>
-
-      <p>Registering takes around 5 minutes.</p>
 
       <a href="british-national" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
         Start now
