--- a/app/views/country.html
+++ b/app/views/country.html
@@ -9,10 +9,10 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column">
 		<h1 class="govuk-heading-xl">
-			Which countries do you want to receive emergency alerts for?
+			Which countries / territories do you want to receive emergency alerts for?
 		</h1>
 		{% if data['countries'] and data['countries'].length %}
-		<form id="countryList" class="form" method="post" action="email_sms">
+		<form id="countryList" class="form" method="post" action="choose_channels">
 			<div class="govuk-form-group">
 				<fieldset class="govuk-fieldset" aria-describedby="waste-hint">
 					<legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
