--- a/app/views/friends-and-family.html
+++ b/app/views/friends-and-family.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="email_sms">Back</a>
+<a class="govuk-back-link" href="choose_channels">Back</a>
 {% endblock %}
 
 {% block content %}
