Replace emergency alerts with travel updates

--- a/app/views/friends-and-family.html
+++ b/app/views/friends-and-family.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-yes">
                         <div class="govuk-form-group">
-                                <p>You can invite other people to subscribe to emergency alerts for the countries you've selected, by entering their email addresses here.</p>
+                                <p>You can invite other people to subscribe to travel updates for the countries you've selected, by entering their email addresses here.</p>
 
                                 {% if data['emailaddresses'] and data['emailaddresses'].length %}
                                     <div class="govuk-form-group">
