--- a/app/views/choose_channels.html
+++ b/app/views/choose_channels.html
@@ -9,7 +9,7 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<h1 class="govuk-heading-xl">
-			Tell us where to send the emergency alerts
+			Tell us where to send the travel updates
 		</h1>
 
 		<details class="govuk-details" data-module="govuk-details">
