--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -10,7 +10,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <div class="govuk-panel govuk-panel--confirmation">
-        <h1 class="govuk-panel__title">Your subscription to emergency alerts</h1>
+        <h1 class="govuk-panel__title">Your subscription to travel updates</h1>
         <div class="govuk-panel__body">
           What to do next
         </div>
