--- a/app/views/country.html
+++ b/app/views/country.html
@@ -9,7 +9,7 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column">
 		<h1 class="govuk-heading-xl">
-			Which countries / territories do you want to receive emergency alerts for?
+			Which countries / territories do you want to receive travel updates for?
 		</h1>
 		{% if data['countries'] and data['countries'].length %}
 		<form id="countryList" class="form" method="post" action="choose_channels">
