Remove 'friends / family' screen

--- a/app/views/choose_channels.html
+++ b/app/views/choose_channels.html
@@ -22,7 +22,7 @@
 				Selecting more than one option could help ensure you receive an alert in the event of an emergency. For example, if you are travelling to a location where internet access or mobile networks might be unreliable, consider subscribing to both an internet-based service (email, WhatsApp) as well as SMS.
 			</div>
 		</details>
-		<form class="form" method="post" action="friends-and-family">
+		<form class="form" method="post" action="check-your-answers">
 			<div class="govuk-form-group">
 				<div class="govuk-checkboxes" data-module="govuk-checkboxes">
 					<div class="govuk-checkboxes__item">
