--- a/app/views/email_sms.html
+++ b/app/views/email_sms.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block beforeContent %}
-<a class="govuk-back-link" href="country">Back</a>
+<a class="govuk-back-link" href="when_do_you_want_to">Back</a>
 {% endblock %}
 
 {% block content %}
