--- a/app/views/index.html
+++ b/app/views/index.html
@@ -138,7 +138,7 @@
 					<p>As of 1 February, the Myanmar Military have declared a state of emergency and assumed control. There are reports that figures in the Civilian Government and civil society have been detained by the military.  The British Embassy is following the situation carefully and will continue to update the Travel Advice.  There may be disruptions to internet, phone networks and ATMs. You are advised to stay home and stay safe. If you need to collect essential provisions, you should do so quickly and avoiding crowds.</p>
 					<br />
 					<p>
-						<a href="/add_country?countryToAdd=Myanmar">Sign up for travel updates</a> to stay up to date with information and advice.
+						<a href="/add_country?countryToAdd=Myanmar">Sign up to receive travel updates</a> to stay up to date with information and advice.
 					</p>
 					<br />
 				</div>
@@ -168,7 +168,7 @@
 					</div>
 				</details>
 				<p class="govuk-body">
-					<a href="/add_country?countryToAdd=Myanmar">Sign up for travel updates</a>
+					<a href="/add_country?countryToAdd=Myanmar">Sign up to receive travel updates</a>
 				</p>
 				<div class="call-to-action">
 					<div role="note" aria-label="Warning" class="application-notice help-notice">
@@ -196,7 +196,7 @@
 					</ul>
 				</div>
 
-				<p>Check our <a href="/guidance/travel-advice-novel-coronavirus">advice on foreign travel during the coronavirus (COVID-19) pandemic</a> and <a href="/foreign-travel-advice/myanmar/email-signup">sign up for email alerts</a> for this travel advice.</p>
+				<p>Check our <a href="/guidance/travel-advice-novel-coronavirus">advice on foreign travel during the coronavirus (COVID-19) pandemic</a> and <a href="/add_country?countryToAdd=Myanmar">sign up to receive travel updates</a>.</p>
 
 				<p>If you’re planning travel to Myanmar, find out what you need to know about coronavirus there in the <a href="/foreign-travel-advice/myanmar/coronavirus">Coronavirus section</a>.</p>
 
