--- a/app/views/intro.html
+++ b/app/views/intro.html
@@ -41,7 +41,7 @@
 			<li>Safety and security</li>
 			<li>Entry requirements</li>
 			<li>Travel warnings</li>
-			<li>Emergency updates</li>
+			<li>Emergency or incident in the country</li>
 		</ul>
 
       <a href="british-national" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
