--- a/app/views/when_do_you_want_to.html
+++ b/app/views/when_do_you_want_to.html
@@ -21,16 +21,16 @@
             <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                 <h1 class="govuk-fieldset__heading">
-                  When do you want to receive travel updates until?
+                  Optional - When do you want to stop receiving travel updates?
                 </h1>
               </legend>
-              <div id="passport-issued-hint" class="govuk-hint">
-                For example, 27 03 2022
-              </div>
-              <div class="govuk-date-input" id="passport-issued">
+				<br />
+
+				<p>Note - You'll also be able to unsubscribe from every update you're sent.</p>
+             <div class="govuk-date-input" id="passport-issued">
                 <div class="govuk-date-input__item">
                     <div class="govuk-form-group">
-                    <label class="govuk-label govuk-date-input__label">Until end date: </label>
+                    <label class="govuk-label govuk-date-input__label">End date: </label>
                     </div>
                 </div>
                 <div class="govuk-date-input__item">
@@ -55,12 +55,10 @@
                     <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="year" name="year" type="text" pattern="[0-9]*" inputmode="numeric"></div>
                 </div>
               </div>
-          
+
             </fieldset>
           </div>
         <button class="govuk-button" data-module="govuk-button">Continue</button>
-        
-        <p>You can also unsubscribe by clicking a link within every alert message</p>
 
       </form>
 
