--- a/app/views/choose_channels.html
+++ b/app/views/choose_channels.html
@@ -19,21 +19,21 @@
 				</span>
 			</summary>
 			<div class="govuk-details__text">
-				Selecting more than one option could help ensure you receive an alert in the event of an emergency. For example, if you are travelling to a location where internet access or mobile networks might be unreliable, consider subscribing to both an internet-based service (email, WhatsApp) as well as SMS.
+				Selecting more than one option could help ensure you receive an alert in the event of an emergency. For example, if you are travelling to a location where internet access or mobile networks might be unreliable, consider subscribing to both an internet-based service (email, WhatsApp) as well as SMS. You'll be able change these options later.
 			</div>
 		</details>
-		<form class="form" method="post" action="check-your-answers">
+		<form class="form" method="post" action="channels_chosen">
 			<div class="govuk-form-group">
 				<div class="govuk-checkboxes" data-module="govuk-checkboxes">
 					<div class="govuk-checkboxes__item">
-						{% if data['emailAddress'] %}
-						<input class="govuk-checkboxes__input" name="channels" type="checkbox" value="email"
+						{% if 'email' in data['channels'] and data['emailAddress'] %}
+						<input class="govuk-checkboxes__input" id="channels-email" name="channels" type="checkbox" value="email"
 							   data-aria-controls="conditional-contact" checked>
 						{% else %}
-						<input class="govuk-checkboxes__input" name="channels" type="checkbox" value="email"
+						<input class="govuk-checkboxes__input" id="channels-email" name="channels" type="checkbox" value="email"
 							   data-aria-controls="conditional-contact">
 						{% endif %}
-						<label class="govuk-label govuk-checkboxes__label">
+						<label class="govuk-label govuk-checkboxes__label" for="channels-email">
 							Email
 						</label>
 					</div>
@@ -49,14 +49,14 @@
 					</div>
 					<div class="govuk-checkboxes" data-module="govuk-checkboxes">
 						<div class="govuk-checkboxes__item">
-							{% if data['phoneNumber'] %}
-							<input class="govuk-checkboxes__input" name="channels" type="checkbox"
+							{% if 'sms' in data['channels'] and data['phoneNumber'] %}
+							<input class="govuk-checkboxes__input" id="channels-sms" name="channels" type="checkbox"
 								   value="sms" data-aria-controls="conditional-contact-3" checked>
 							{% else %}
-							<input class="govuk-checkboxes__input" name="channels" type="checkbox"
+							<input class="govuk-checkboxes__input" id="channels-sms" name="channels" type="checkbox"
 								   value="sms" data-aria-controls="conditional-contact-3">
 							{% endif %}
-							<label class="govuk-label govuk-checkboxes__label" for="contact-3">
+							<label class="govuk-label govuk-checkboxes__label" for="channels-sms">
 								SMS
 							</label>
 						</div>
@@ -77,11 +77,11 @@
 
 					<div class="govuk-checkboxes__item">
 						{% if 'whatsapp' in data['channels'] %}
-						<input class="govuk-checkboxes__input" name="channels" type="checkbox" value="whatsapp" checked data-aria-controls="conditional-whatsapp">
+						<input class="govuk-checkboxes__input" id="channels-whatsapp" name="channels" type="checkbox" value="whatsapp" checked data-aria-controls="conditional-whatsapp">
 						{% else %}
-						<input class="govuk-checkboxes__input" name="channels" type="checkbox" value="whatsapp" data-aria-controls="conditional-whatsapp">
+						<input class="govuk-checkboxes__input" id="channels-whatsapp" name="channels" type="checkbox" value="whatsapp" data-aria-controls="conditional-whatsapp">
 						{% endif %}
-						<label class="govuk-label govuk-checkboxes__label">
+						<label class="govuk-label govuk-checkboxes__label" for="channels-whatsapp">
 							WhatsApp
 						</label>
 					</div>
