--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -16,13 +16,13 @@
         </div>
       </div>
 		<br />
-		{% if data['emailAddress'] %}
+		{% if 'email' in data['channels'] and data['emailAddress'] %}
 		<h2 class="govuk-heading-m">Email</h2>
       <p>
         An email has been sent to {{data['emailAddress']}}, which includes a link for you to verify your email address.
       </p>
 		{% endif %}
-		{% if data['phoneNumber'] %}
+		{% if 'sms' in data['channels'] and data['phoneNumber'] %}
 		<h2 class="govuk-heading-m">SMS</h2>
 		<p>
 			A message has been sent by SMS to {{data['phoneNumber']}}. Reply to it as directed in the message to verify your number.
@@ -38,6 +38,10 @@
 		</ol>
 		</p>
 		{% endif %}
+		<br />
+		<hr />
+		<p><a href="sample_email">See an example alert email</a></p>
+		<p><a href="sample_sms">See an example alert SMS</a></p>
     </div>
   </div>
 
