--- a/app/views/choose_channels.html
+++ b/app/views/choose_channels.html
@@ -7,9 +7,9 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-	<div class="govuk-grid-column-two-thirds">
+	<div class="govuk-grid-column-three-quarters">
 		<h1 class="govuk-heading-xl">
-			Tell us where to send the travel updates
+			How would you like to receive travel updates?
 		</h1>
 
 		<details class="govuk-details" data-module="govuk-details">
