--- a/app/views/when_do_you_want_to.html
+++ b/app/views/when_do_you_want_to.html
@@ -15,16 +15,15 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-three-quarters">
       <form class="form" action="choose_channels" method="post">
         <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                <h1 class="govuk-fieldset__heading">
+                <h1 class="govuk-heading-xl">
                   Optional - When do you want to stop receiving travel updates?
                 </h1>
               </legend>
-				<br />
 
 				<p>Note - You'll also be able to unsubscribe at any time, instructions will be in every update you're sent.</p>
              <div class="govuk-date-input" id="passport-issued">
